--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/continuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFC107"
+        android:backgroundTint="#049947"
         android:text="Continuar"
         android:textColor="@color/black"
         android:textSize="20dp"
