--- a/app/src/main/res/layout/activity_restaurar_contrasena.xml
+++ b/app/src/main/res/layout/activity_restaurar_contrasena.xml
@@ -5,51 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".RestaurarContrasena">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        app:counterEnabled="true"
-        app:counterMaxLength="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.500"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.440">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputUsuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_usuario"
-            android:inputType="number"
-            tools:ignore="TextContrastCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        app:counterEnabled="true"
-        app:counterMaxLength="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.500"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.550">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputContrasena"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_contrasena"
-            android:inputType="numberPassword"
-            tools:ignore="TextContrastCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
         android:id="@+id/imageView"
@@ -65,10 +22,10 @@
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/LabelInicioSesion"
+        android:id="@+id/label_restablecer_contrasena"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_inicio"
+        android:text="@string/label_restablecer_contrasena"
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -79,12 +36,66 @@
         app:layout_constraintVertical_bias="0.334"
         tools:ignore="SpUsage" />
 
+    <ImageButton
+        android:id="@+id/imageButtonInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
+        app:srcCompat="@drawable/iconmenu"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.500"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.440">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/I"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/input_correo_electronico"
+            android:inputType="number"
+            tools:ignore="TextContrastCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.500"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.550">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/InputContrasena"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/input_confirmar_correo_electronico"
+            android:inputType="numberPassword"
+            tools:ignore="TextContrastCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
-        android:id="@+id/ButtonIngresar"
+        android:id="@+id/ButtonEnviar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#049947"
-        android:text="@string/button_ingresar"
+        android:text="@string/button_restablecer_contrasena"
         android:textColor="@color/black"
         android:textFontWeight="@integer/material_motion_duration_long_2"
         android:textSize="20dp"
@@ -95,23 +106,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.667"
         tools:ignore="SpUsage,TextSizeCheck,UnusedAttribute" />
-
-    <Button
-        android:id="@+id/ButtonOlvidasteContrasena"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00431919"
-        android:text="@string/label_olvidaste_contrasena"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.875"
-        tools:ignore="SpUsage,TextSizeCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
