[CONFIG] se realizan configuraciones generales en el proyecto

--- a/app/src/main/res/layout/activity_liquidacion_por_dias.xml
+++ b/app/src/main/res/layout/activity_liquidacion_por_dias.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LiquidacionPorDias"
     tools:layout_editor_absoluteX="-179dp"
     tools:layout_editor_absoluteY="-3dp">
@@ -50,7 +51,7 @@
         android:ems="10"
         android:hint="@string/edittext_dias_defecto"
         android:inputType="numberDecimal"
-        android:textSize="14dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
@@ -68,6 +69,7 @@
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
@@ -84,6 +86,7 @@
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
@@ -95,17 +98,17 @@
     <TextView
         android:id="@+id/auxilioTransporte"
         android:layout_width="169dp"
-        android:layout_height="70dp"
+        android:layout_height="57dp"
+        android:gravity="center"
         android:text="@string/label_auxilio_transporte_dias"
         android:textColor="@color/black"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.740"
+        app:layout_constraintVertical_bias="0.73"
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <TextView
@@ -115,6 +118,7 @@
         android:gravity="center"
         android:text="@string/label_salario"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -130,6 +134,7 @@
         android:gravity="center"
         android:text="@string/label_fecha_final_liquidar"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -145,6 +150,7 @@
         android:gravity="center"
         android:text="@string/label_fecha_inicio_liquidar"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -155,12 +161,12 @@
 
     <Button
         android:id="@+id/botonPorDias"
-        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#DCDFDEDE"
+        android:backgroundTint="#612196F3"
         android:text="@string/button_liquidacion_por_dias"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,13 +179,14 @@
 
     <Button
         android:id="@+id/botonTiempoCompleto"
-        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="172dp"
         android:layout_height="55dp"
         android:text="@string/button_liquidacion_tiempo_completo"
         android:textColor="@color/black"
         android:textColorHint="#151414"
         android:textColorLink="#0E0D0D"
+        android:backgroundTint="#68B26B"
+        android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,10 +214,10 @@
         android:id="@+id/diasLaboradosSemana"
         android:layout_width="169dp"
         android:layout_height="57dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:gravity="center"
         android:text="@string/label_dias_laborados_semana"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -220,30 +227,46 @@
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/checkboxAuxilioTransporte"
         android:layout_width="59dp"
         android:layout_height="25dp"
-        android:text="Si"
+        android:text="SI"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.725"
+        app:layout_constraintVertical_bias="0.700"
         tools:ignore="HardcodedText,TouchTargetSizeCheck,TextSizeCheck" />
+
+    <EditText
+        android:id="@+id/editTextAuxilioTransporte"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:visibility="gone"
+        android:inputType="numberDecimal"
+        android:text="@string/edittext_auxilio_trabajo_por_dias"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.750" />
 
     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="59dp"
         android:layout_height="25dp"
-        android:checked="true"
-        android:text="No"
+        android:text="NO"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.727"
+        app:layout_constraintVertical_bias="0.700"
         tools:ignore="HardcodedText,TouchTargetSizeCheck,TextSizeCheck" />
 
     <EditText
@@ -254,7 +277,7 @@
         android:hint="@string/edittext_salario_diario_defecto"
         android:importantForAutofill="no"
         android:inputType="text"
-        android:textSize="14dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
@@ -268,7 +291,7 @@
         android:layout_width="380dp"
         android:layout_height="30dp"
         android:backgroundTint="@color/black"
-        android:textSize="14dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -281,13 +304,13 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_liquidacion"
+        android:text="@string/label_liquidacion_por_dias"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.046"
