--- a/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
+++ b/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LiquidacionTiempoCompleto"
     tools:layout_editor_absoluteX="9dp"
     tools:layout_editor_absoluteY="5dp">
@@ -12,12 +13,12 @@
 
     <Button
         android:id="@+id/botonTiempoCompleto"
-        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="172dp"
         android:layout_height="55dp"
-        android:backgroundTint="#DCDFDEDE"
+        android:backgroundTint="#7C68B26B"
         android:text="@string/button_liquidacion_tiempo_completo"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:textColorHint="#151414"
         android:textColorLink="#0E0D0D"
         app:cornerRadius="5dp"
@@ -32,11 +33,12 @@
 
     <Button
         android:id="@+id/botonPorDias"
-        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="172dp"
         android:layout_height="55dp"
         android:text="@string/button_liquidacion_por_dias"
         android:textColor="@color/black"
+        android:backgroundTint="#2196F3"
+        android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +56,7 @@
         android:gravity="center"
         android:text="@string/label_fecha_inicio_liquidar"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -69,6 +72,7 @@
         android:gravity="center"
         android:text="@string/label_fecha_final_liquidar"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -84,6 +88,7 @@
         android:gravity="center"
         android:text="@string/label_salario"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -94,26 +99,27 @@
 
     <TextView
         android:id="@+id/auxilioTransporte"
-        android:layout_width="169dp"
-        android:layout_height="70dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:layout_width="171dp"
+        android:layout_height="57dp"
+        android:gravity="center"
         android:text="@string/label_auxilio_transporte"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.645"
+        app:layout_constraintVertical_bias="0.640"
         tools:ignore="RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkboxAuxilioTransporte"
         android:layout_width="59dp"
         android:layout_height="25dp"
         android:text="SI"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -122,13 +128,28 @@
         app:layout_constraintVertical_bias="0.627"
         tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck" />
 
+    <EditText
+        android:id="@+id/editTextAuxilioTransporte"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:visibility="gone"
+        android:inputType="numberDecimal"
+        android:text="@string/edittext_auxilio_trabajo"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
+
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkboxAuxilioTransporteFalse"
         android:layout_width="59dp"
         android:layout_height="25dp"
-        android:checked="true"
         android:text="NO"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.928"
@@ -146,6 +167,7 @@
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
@@ -163,6 +185,7 @@
         android:text="@string/button_fecha_defecto"
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
@@ -178,7 +201,7 @@
         android:ems="10"
         android:hint="@string/edittext_salario_mensual_defecto"
         android:inputType="numberDecimal"
-        android:textSize="14dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
@@ -222,7 +245,7 @@
         android:layout_width="380dp"
         android:layout_height="30dp"
         android:backgroundTint="@color/black"
-        android:textSize="14dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -248,13 +271,13 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_liquidacion"
+        android:text="@string/label_liquidacion_tiempo_completo"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.046"
