--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".PlanillaNomina"
     tools:layout_editor_absoluteX="6dp"
     tools:layout_editor_absoluteY="5dp">
